test/files/neg/macro-invalidret-nonuniversetree/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}
import scala.reflect.runtime.{universe => ru}

object Impls {
  def foo(c: Ctx) = ru.Literal(ru.Constant(42))
}
